Cleaned up the launcher code a bit. The launch command is now assembled via a builder. Not the final clean solution, but progress...